# slicplusplus

./: CMakeLists.txt  README.md
include/slic++/: Actions.hpp  Common.hpp  Engine.hpp  Errors.hpp  FramedStream.hpp  LLStream.hpp  MaxFile.hpp  NetConnection.hpp  Run.hpp  SlicConfig.hpp  TcpSocket.hpp  UdpSocket.hpp
include/slic++/internal/: MemAlignedBuffer.hpp
tests/: MappedElementTest.cpp  PassthroughTest.cpp
tests/bitstreams/: .classpath  .project
tests/bitstreams/src/com/maxeler/slic/tests/: MappedElementTest.maxj  PassthroughTest.maxj
